--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "epsan-crafts",
   "version": "1.0.0",
   "private": true,
-  "description": "epsan-crafts",
-  "author": "Sudharaka",
+  "description": "Portfolio Website for Epsan Crafts",
+  "author": "OpenArchitex <sudharakap@mun.ca>",
   "keywords": [
     "gatsby"
   ],
@@ -27,5 +27,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "theme-ui": "^0.16.0"
+  },
+  "engines": {
+    "node": "18.x",
+    "npm": "8.x"
   }
 }
