--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@theme-ui/mdx": "^0.16.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
+    "gatsby-plugin-manifest": "^5.11.0",
     "gatsby-plugin-sharp": "^5.11.0",
     "gatsby-plugin-theme-ui": "^0.16.0",
     "gatsby-source-filesystem": "^5.11.0",
