--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\""
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@mdx-js/react": "^2.3.0",
-    "@theme-ui/mdx": "^0.16.0",
     "gatsby": "^5.11.0",
     "gatsby-plugin-image": "^3.11.0",
     "gatsby-plugin-manifest": "^5.11.0",
@@ -27,10 +25,27 @@
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "theme-ui": "^0.16.0"
+    "bootstrap": "^5.2.3",
+    "react-bootstrap": "^2.7.0",
+    "gatsby-omni-font-loader": "^2.0.2",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.6"
   },
   "engines": {
     "node": "18.x",
     "npm": "8.x"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OpenArchitex/epsan-crafts"
+  },
+  "bugs": {
+    "url": "https://github.com/OpenArchitex/epsan-crafts/issues"
   }
 }
